# VSE-MANAGER

./: .gitattributes  .gitignore  AGENTS.md  AVVIA_PC_AZIENDALE.bat  AVVIA_SERVER_LAN.bat  CLAUDE.md  INSTALLA_PC_AZIENDALE.bat  README.md  REPORT_AUDIT_2026-06-12.md  esa615_app_v2.py
apps/backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_vse_review_pdf.py  0003_equipment_registry.py  0004_auth_users.py  0005_user_owned_data.py
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  entities.py
apps/backend/app/schemas/: jobs.py
apps/backend/app/services/: anomaly_service.py  ansur_parser.py  ansur_template_detector.py  auth_service.py  backup_service.py  bulk_pdf_service.py  column_mapper.py  consip_pdf_generator.py  csv_parser.py  difference_analyzer.py  dta_parser.py  equipment_registry_service.py  esa615_legacy_adapter.py  esa615_parser.py  excel_importer.py  file_renamer.py  font_manager.py  log_service.py  matcher.py  measurement_deduplication_service.py  measurement_indexer.py  measurement_selector.py  mtr_parser.py  mtr_writer.py  (+7 more)
apps/backend/tests/: test_ansur_vse_services.py  test_column_mapper.py  test_equipment_registry.py  test_file_renamer.py  test_health.py  test_import_identifier_assignment.py  test_login_rate_limit.py  test_matcher.py  test_measurement_deduplication.py  test_port_checker.py  test_session_defaults.py
(+110 files in other folders)
