[project]
name = "gestione-vse-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg2-binary",
  "pandas",
  "openpyxl",
  "rapidfuzz",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "fpdf",
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
